app/assets/stylesheets/_posts_projects.css.scss
#post_wrapper{
  padding: 3em 0;
  text-align: center;
  a{
    text-decoration: none;
    color: $dark;
    &:hover{
    color: $highlight;
    }
  }
  .post{
    background-color:#fcfcfc;
    border: 1px solid $border;
    margin: 0.7rem 0 2rem 0;
    padding: 3.5rem;
    box-shadow:0px 17px 20px -10px $metal;
    cursor: pointer;
    transition: all ease-in-out 300ms;
    &:hover{
      box-shadow:0px 37px 18px -20px $metal;
      transform: translate(0px, -10px)
    }
    .date{
    font-size: .9em;
    margin: 0;
    padding-top: 15px;
    }
    h2{
      margin-bottom: 0;
      margin: 0;
      font-size: 1.6em;
      text-transform: uppercase;
    }
  }
  hr{
    margin: 3em auto;
  }
}

// --- Posts Show ---//

#post_show_content{
    width:80%;
    max-width: 760px;
    margin: 0 auto;
    padding: 2rem 0;
  header{
    text-align: center;
    .date {
      font-size: .9em;
      color: $light;
      margin: 0;
    }
    h1{
      margin: 0;
    }
  }
  hr{
    margin: 3em auto;
  }
}
#content{
  img{
    width: 60%;
    float: left;
    padding-right:0.8em;
    padding-top:0.8em;
  }
}

#share_box{
  text-align: center;
   clear: both;
   padding-top: 1em;
  p{
    padding: 0 0 1em 0;
    margin: 0;
    font-weight: 700;
    text-transform: uppercase;
    color: $dark;
    font-size: .8em;
  }
  i {
    color: $dark;
    padding: 1em 1.5em;
    &:hover {
      color: $highlight;
      cursor: pointer;
    }
  }
}

#admin_links {
  border-top: 1px solid $border;
  border-bottom: 1px solid $border;
  text-align: center;
  padding: 1em 0;
  margin: 3em 0;
  clear: both;
  a {
    color: $light;
    margin: 0 1em;
    font-weight: 700;
    font-size: .8em;
    text-transform: uppercase;
    text-decoration: none;
  }
}

// --- Pagination -- //

.pagination:before,
.pagination:after {
  content: " ";
  display: table;
}

.pagination:after{
  clear: box;
}

.pagination{
  text-align: center;
  margin: 0 0 3em 0;
  a, .previous_page, .current, .next_page{
    padding: .75em 1em;
    margin: 0 .5em;
    border-radius: .15em;
    line-height:20px;
    text-decoration: none;
    background: $white;
    font-weight: 700;
    font-size: .7em;
    font-style: normal;
    color: $dark;
    &:hover{
      background: $highlight;
      color: $white;
    }
  }
  .current{
  background: $highlight;
  color: $white;
  }
  .disabled{
    color: #C0C0C0;
    &:hover{
      color: #C0C0C0;
      background: $white;
    }
  }
}
// --- Tablets/Ipads screen size ---//
@media only screen and (max-width: 788px){
#post_wrapper{
  padding: 3em 0;
  text-align: center;
  .post{
    background-color:#fcfcfc;
    border: 1px solid $border;
    margin: 0.7rem 0;
    padding: 3.5rem;
    .date{
    font-size: .9em;
    margin: 0;
    }
    h2{
      margin-bottom: 0;
      margin: 0;
      font-size: 2em;
      text-transform: uppercase;
      a{
        text-decoration: none;
        color: $dark;
        &:hover{
        color: $highlight;
        }
      }
    }
  }
  hr{
    margin: 3em auto;
  }
}
}
@media only screen and (max-width: 488px){
#content{
  img{
    width: 100%;
    float: left;
    padding-right:0.8em;
    padding-top:0.8em;
  }
}
#post_wrapper{
  padding: 3em 0;
  text-align: center;
  a{
    text-decoration: none;
    color: $dark;
    &:hover{
    color: $highlight;
    }
  }
  .post{
    background-color:#fcfcfc;
    border: 1px solid $border;
    margin: 0.7rem 0 2rem 0;
    padding: 3.5rem;
        /* These are technically the same, but use both */
    overflow-wrap: break-word;
    word-wrap: break-word;

    -ms-word-break: break-all;
    /* This is the dangerous one in WebKit, as it breaks things wherever */
    word-break: break-all;
    /* Instead use this non-standard one: */
    word-break: break-word;

    /* Adds a hyphen where the word breaks, if supported (No Blink) */
    -ms-hyphens: auto;
    -moz-hyphens: auto;
    -webkit-hyphens: auto;
    hyphens: auto;
    .date{
    font-size: .9em;
    margin: 0;
    padding-top: 10px;
    }
    h2{
      margin-bottom: 0;
      margin: 0;
      font-size: 1.4em;
      text-transform: uppercase;
    }
  }
  hr{
    margin: 3em auto;
  }
}
}

